--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Teja -CSV to Bulk BO orders -KITE</title>
-	<h1>Teja -CSV to Bulk BO orders -KITE</h1>
+	<h1>CSV to Bulk BO orders -KITE</h1>
 <a href="example.csv">Sample CSV to Use</a>	
 </head>
 
@@ -186,4 +186,5 @@
 	</script>
 
 </body>
+	<footer>&copy; Copyright 2018 Teja-los7cau53</footer>
 </html>
