--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				var orderType = x[row][5];
 				var quantity =parseInt( x[row][6]);
 			  var limitPrice = parseFloat(x[row][7]);
-				var triggerPrice =parseFloat(x[row][8]);//parseFloat(x[row][6]).toFixed(2); //!isNaN(parseFloat(x[row][6]).toFixed(2)) ? parseFloat(x[row][6]).toFixed(2) : 0;
+				var trigger_price =parseFloat(x[row][8]);//parseFloat(x[row][6]).toFixed(2); //!isNaN(parseFloat(x[row][6]).toFixed(2)) ? parseFloat(x[row][6]).toFixed(2) : 0;
         //ignore disclose
 			  var stoploss =parseFloat(x[row][10]);
 				var squareoff =parseFloat(x[row][11]);
