--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
 
 	</script>
 	<br> </br>
-<div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/60761-10-5.js"></script></div><a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"><img src="http://www.webestools.com/images/ban03.gif" alt="Tools services webmasters counters generators scripts tutorials free" /></a>
-</body>
+<div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/60761-10-5.js"></script></div>
 	<footer>&copy; Copyright 2018 Teja-los7cau53</footer>
 	
 </html>
