--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <title>Teja -CSV to Bulk BO orders -KITE</title>
 	<h1>CSV to Bulk BO orders -KITE</h1>
-<a href="example.csv">Sample CSV to Use</a>	
+<a href="example.csv">Sample CSV to Use &emsp;</a>	
 	<button type="button" class="btn btn-success" onclick="placeBasketOrder()">Place All Orders</button>
 </head>
 
