--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta charset="utf-8" />
 <title>Teja -CSV to Bulk BO orders -KITE</title>
 	<h1>CSV to Bulk BO orders -KITE</h1>
-<a href="example.csv">Sample CSV to Use &emsp;</a>	
-	<button type="button" class="btn btn-success" onclick="placeBasketOrder()">Place All Orders</button>
+<a href="example.csv">Sample CSV to Use</a>	
+ &emsp; &emsp; &emsp; &emsp; &emsp;	<button type="button" class="btn btn-success" onclick="placeBasketOrder()">Place All Orders</button>
 </head>
 
 <body>
