--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Teja -CSV to Bulk BO orders -KITE</title>
 	<h1>CSV to Bulk BO orders -KITE</h1>
 <a href="example.csv">Sample CSV to Use</a>	
- &emsp; &emsp; &emsp; &emsp; &emsp;	<button type="button" class="btn btn-success" onclick="placeBasketOrder()">Place All Orders</button>
+ &emsp; &emsp; &emsp; &emsp; &emsp;	<button type="button" class="btn btn-success" onclick="placeBasketOrder()">Place All Orders</button>  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;Click on Allow popups/tutnoff popup blocker on this page 
 </head>
 
 <body>
